--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,11 @@ title: "Pietro's blog"
 email: pietro@carrucciu.com
 description: >- # this means to ignore newlines until "baseurl:"
   A place to share my thoughts and explore ideas.
+
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://carruc.eu" # the base hostname & protocol for your site, e.g. http://example.com
+permalink: /:title
+
 icon: /assets/images/carruc-eu-icon.png
 github_username:  carruc
 
