Fixed permalink in menu references.

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: "Resume"
-  url: /resume.html
+  url: /resume
   
 - title: "About Me"
-  url: /about.html
+  url: /about
 
 - title: "GitHub"
   url: https://github.com/carruc
