--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: pietro@carrucciu.com
 description: >- # this means to ignore newlines until "baseurl:"
   A place to share my thoughts and explore ideas.
 
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://carruc.eu" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:title
 
