Typo errors, added Call menu item.

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,3 +9,6 @@
 
 - title: "LinkedIn"
   url: https://linkedin.com/in/pietro-carrucciu
+
+- title: "Book a Call"
+  url: https://cal.com/carruc/meet
